Día 2: mini-proyecto con títulos, párrafos, listas, enlaces e imágenes

--- a/dia-2-html-intermedio/index.html
+++ b/dia-2-html-intermedio/index.html
@@ -4,6 +4,55 @@
     <meta charset="UTF-8"> <!-- Esto define la codificacion de caracteres como tildes o ñ-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Esto hace que la pagina sea responsive -->
     <title>Mi primera web</title> <!-- Esto es el titulo que aparece en la pestaña del navegador -->
+<style>
+  body {
+    background-color: #f0f0f0;
+    font-family: Arial, sans-serif;
+  }
+
+  h1 {
+    color: darkblue;
+    text-align: center; 
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+
+  h2 {
+    color: darkgreen;
+    font-size: 28px;
+  }
+
+  p {
+    color: #333333;
+    font-size: 16px;
+    line-height: 1.5; /* Espaciado entre líneas */
+    text-align: justify; /* Justificar el texto */
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  ul {
+    background-color: #ffffff;
+    padding: 15px; /* Espaciado interno */
+    margin: 20px 0; /* Espaciado externo */
+    border: 2px solid #888888; /* Borde */
+    border-radius: 5px; /* Bordes redondeados */
+  }
+
+  a {
+    color: red;
+    text-decoration: none;
+  }
+
+  img {
+    border: 2px solid black;
+    width: 150px;
+    float: right;  /* La imagen se alinea a la derecha */
+    margin-left: 15px;
+  }
+</style>
+
 </head>
 <body> <!-- Esto es lo que se en la pagina web -->
     <h1>Hola, soy Héctor</h1> <!-- Esto es el titulo de la pagina -->
@@ -16,12 +65,7 @@
         <li>Lectura</li>
         <li>Viajes</li>
     </ul>
-    <ol> <!-- Esto es una lista ordenada -->
-        <li>Aprender HTML</li>
-        <li>Aprender CSS</li>
-        <li>Crear proyectos web</li>
-    </ol>
     <a href="https://www.youtube.com" target="_blank">YouTube</a> <!-- Esto es un enlace que abre en una nueva pestaña -->
-    <img src="https://via.placeholder.com/150" alt="Imagen de ejemplo"> <!-- Esto es una imagen con texto alternativo -->
+    <img src="https://placehold.co/150" alt="Imagen de ejemplo"> <!-- Esto es una imagen con texto alternativo -->
 </body> 
 </html>
